spec/lib/fs/folder_core/errors/detectors/pathError.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns failing folder path for title',
        i: ['title', 'failing/path', 'failing/path'],
        e: ['title', 'failing/path']
      }, {
        it: 'returns false if folder files loaded',
        i: ['title', 'success/path', []],
        e: false
      }
    ]);
  };

}).call(this);
